# dprint

./: .gitignore  dprint.config.json  index.css  index.html  style.css
crates/dprint/: Cargo.toml
crates/dprint/src/: create_formatter.rs  main.rs  run_cli.rs  types.rs
crates/dprint/src/cli/: arg_parser.rs  mod.rs  run_cli.rs
crates/dprint/src/configuration/: get_global_config.rs  get_init_config_file_text.rs  get_plugin_config_map.rs  project_type.rs
crates/dprint/src/environment/: environment.rs  real_environment.rs  test_environment.rs
crates/dprint/src/plugins/: cache.rs  container.rs  initialize.rs  loader.rs  manifest.rs  mod.rs  plugin.rs  resolver.rs  types.rs
crates/dprint/src/plugins/cache/: cache.rs  manifest.rs
crates/dprint/src/plugins/repo/: read_info_file.rs
crates/dprint/src/plugins/wasm/: bytes_transmitter.rs  compile.rs  functions.rs  load.rs  mod.rs  plugin.rs  wasm_plugin_loader.rs  wasm_plugin_resolver.rs
crates/dprint/src/utils/: file_path_utils.rs  mod.rs
crates/dprint/test/: test_plugin.wasm
crates/dprint/test/plugin/: build.ps1
crates/dprint/test/plugin/src/: lib.rs
playground/: asset-manifest.json  index.html  precache-manifest.01a972bd4efe3b3930dac53d5a864f9e.js  precache-manifest.020babca738836fea32475f6f6a5e258.js  precache-manifest.038ac0923f02eec060316334ac2e5c3e.js  precache-manifest.04e6eb13b15d30bde30d238fc65ec4ae.js  precache-manifest.057aec8ef8e61d140b6883ec8a0e3e32.js  precache-manifest.05c6f38165a3315347dff5d291c4f219.js  precache-manifest.06459338f4bc4a63f04d1f14aac3ef82.js  (+287 more)
sponsor/: index.html
(+2465 files in other folders)
