[package]
name = "dprint"
version = "0.3.2"
authors = ["Bartek Iwańczuk <biwanczuk@gmail.com>", "David Sherret<dsherret@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Binary for dprint."
repository = "https://github.com/dprint/dprint"

[dependencies]
clap = "2.33.0"
dprint-core = { path = "../core", version = "0.19.1" }
# dprint-plugin-typescript = { path = "../dprint-plugin-typescript", version = "0.17.2" }
dprint-plugin-jsonc = { path = "../dprint-plugin-jsonc", version = "0.2.3" }
globwalk = "0.8.0"
jsonc-parser = { version = "0.5.0" }
indicatif = "0.14.0"
reqwest = { version = "0.10.4" }
bytes = "0.5.4"
futures = { version = "0.3.4", features = ["compat", "io-compat"] }
tokio = { version = "0.2", features = ["full", "blocking"] }
async-trait = "0.1.30"
app_dirs = "1.2.1"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
wasmer-runtime = "0.17.0"
wasmer-runtime-core="0.17.0"

[dev-dependencies]
globset = "0.4.5"
